<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/launch_"
    tools:context=".SubmissionPage">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentInsetStart="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dimen_48dp"
                    android:layout_marginTop="16dp"
                    android:paddingTop="@dimen/dimen_8dp"
                    android:scaleType="centerInside"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/gads_header" />

                <ImageView
                    android:id="@+id/backArrow"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginStart="@dimen/dimen_24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/imageView"
                    app:layout_constraintTop_toTopOf="@+id/imageView"
                    app:layout_constraintVertical_bias="1.0"
                    app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.appcompat.widget.Toolbar>


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_32"
            android:gravity="center_horizontal"
            android:text="@string/project_submission"
            android:textColor="@color/orange"
            android:textSize="24sp"
            android:textStyle="bold" />

    </com.google.android.material.appbar.AppBarLayout>


    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:layout_marginStart="@dimen/dimen_32"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/dimen_32"
        android:background="@drawable/line"
        android:paddingStart="@dimen/dimen_48dp"
        android:paddingEnd="@dimen/dimen_48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/appBarLayout"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="@dimen/dimen_48dp"
        android:layout_marginEnd="32dp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/firstname"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/dimen_8dp"
            android:layout_weight="1"
            android:background="@drawable/white_bg"
            android:ems="10"
            android:hint="@string/first_name"
            android:inputType="textPersonName"

            android:textStyle="bold">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/firstname_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/white_bg"
                android:padding="@dimen/dimen_8dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lastname"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/dimen_8dp"
            android:layout_weight="1"
            android:background="@drawable/white_bg"
            android:ems="10"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:textSize="18sp"
            android:textStyle="bold">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lastname_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/white_bg"
                android:padding="@dimen/dimen_8dp" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/white_bg"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_bg"
            android:padding="@dimen/dimen_8dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/github_link"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:background="@drawable/white_bg"
        android:ems="10"
        android:hint="@string/project_on_github_link"
        android:inputType="textPersonName"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/email"
        app:layout_constraintStart_toStartOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/github_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_bg"
            android:padding="@dimen/dimen_8dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/submit_btn"
        android:paddingStart="@dimen/dimen_48dp"
        android:paddingEnd="@dimen/dimen_48dp"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/github_link"
        app:layout_constraintStart_toStartOf="@+id/github_link"
        app:layout_constraintTop_toBottomOf="@+id/github_link" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:indeterminateBehavior="cycle"
        android:indeterminateTint="@color/orange"
        android:indeterminateTintMode="multiply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>